--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -6,8 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="#550606"
     tools:context=".ResultActivity">
-    
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/pics"/>
     <TextView
         android:id="@+id/resultTv"
         android:layout_width="match_parent"
@@ -17,5 +21,6 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textAlignment="center"/>
+
 
 </LinearLayout>
